Fix section quick-fit menu z-index / overlap

--- a/app/less/outfit.less
+++ b/app/less/outfit.less
@@ -53,9 +53,10 @@
 
 .section-menu {
   position: relative;
-  z-index: 1;
+  z-index: 0;
 
   &.selected {
+    z-index: 1;
     h1 {
       background-color: @primary;
     }
